Updated about page content and CSS of the image

--- a/about.html
+++ b/about.html
@@ -41,13 +41,12 @@
             <a href="/" title="Homepage">Home</a>
           </span>
           <span class="nav-heading">
-            <a href="/about.html" title="About Gizem Eda Varol" class="active">About</a>
+            <a href="/about.html" title="About Gizem Eda Varol" class="active"
+              >About</a
+            >
           </span>
           <span class="nav-heading">
-            <a
-              href="/projects.html"
-              title="The projects of Gizem Eda Varol"
-            >
+            <a href="/projects.html" title="The projects of Gizem Eda Varol">
               Projects</a
             >
           </span>
@@ -56,19 +55,37 @@
           </span>
         </div>
         <hr />
+      </nav>
       <h1 class="hero">About me</h1>
     </div>
     <div class="container">
       <div class="row">
         <div class="about-text col-lg-6">
           <h2 class="text-dark mt-5">Hi, I’m Gizem Eda Varol</h2>
-          <div class="definition bg-light mt-3">
-            <h3 class="text-dark">Front-end developer, based in Spain</h3>
+          <div class="definition bg-light p-2 mt-3">
             <p class="text-muted mb-1">
-              I’m very passionate about coding and very eager to improve myself.
-              I’m currently seeking new opportunities in front-end development.
-              I’m open to work remotely and have flexible hours. I’m highly
-              skilled in JavaScript and React.
+              I was born in 1991 in Istanbul, Turkey. I have bachelor and master
+              degrees about Metallurgical and Materials Engineering from
+              Istanbul Technical University. I came to Barcelona in 2017 by
+              Erasmus Exchange Programme to write my master thesis.
+              <br />
+              I wanted to change my career to have a chance for working with an
+              international team in the IT sector. I always admired Spanish
+              culture and language, that’s why I started to search for a job
+              especially in Spain. Finally my dream came true and I had a chance
+              to work in Barcelona. I am currently working at GoDaddy as a
+              vender. I am also in charge of solving technical problems in
+              domains, SSL certificates and hosting websites.
+              <br />
+              The opportunity to learn new skills and work with new technologies
+              is particularly attractive for me. Therefore, I was willing to go
+              further, to learn about coding as well. I found SheCodes workshops
+              on the internet and I found them very interesting. I've learnt a
+              lot from SheCodes workshops such as HTML, advanced CSS,
+              JavaScript, API, Responsive, and I keep learning even more. I
+              believe that my strong technical experience, education (ABET
+              Accredited Program) and study of coding workshops will make me
+              very successful in software sector as a front-end developer.
             </p>
             <div class="button p-4 ps-0">
               <a
@@ -84,7 +101,7 @@
           <img
             src="images/giz.jpg"
             alt="image of Gizem Eda Varol"
-            class="img-fluid rounded mb-5"
+            class="gizem-image img-fluid rounded"
           />
         </div>
       </div>
