Updated project definitions and ready for the last version of the app

--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
               Istanbul Technical University. I came to Barcelona in 2017 by
               Erasmus Exchange Programme to write my master thesis.
               <br />
+              <br />
               I wanted to change my career to have a chance for working with an
               international team in the IT sector. I always admired Spanish
               culture and language, that’s why I started to search for a job
@@ -77,15 +78,17 @@
               vender. I am also in charge of solving technical problems in
               domains, SSL certificates and hosting websites.
               <br />
+              <br />
               The opportunity to learn new skills and work with new technologies
               is particularly attractive for me. Therefore, I was willing to go
               further, to learn about coding as well. I found SheCodes workshops
               on the internet and I found them very interesting. I've learnt a
               lot from SheCodes workshops such as HTML, advanced CSS,
-              JavaScript, API, Responsive, and I keep learning even more. I
-              believe that my strong technical experience, education (ABET
-              Accredited Program) and study of coding workshops will make me
-              very successful in software sector as a front-end developer.
+              JavaScript, API, Responsive, GitHub, Bootstrap, Hosting and I keep
+              learning even more. I believe that my strong technical experience,
+              education (ABET Accredited Program) and study of coding workshops
+              will make me very successful in software sector as a Front-end
+              Developer.
             </p>
             <div class="button p-4 ps-0">
               <a
