--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <hr />
       </nav>
       <div class="hero mb-5">
-        <h2>🖐🏼 Hello I’m</h2>
+        <h2>👋🏼 Hello, I’m</h2>
         <h1 class="mb-3">Gizem Eda Varol</h1>
         <h3 class="developer-text text-opacity-light mb-4">
           Front-end developer, based in Spain
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row mt-5">
+      <div class="row mt-5 mb-2">
         <div class="col-lg-6 image-column">
           <img
             src="images/cappadocia.png"
@@ -74,15 +74,28 @@
             class="project-image img-fluid rounded mb-5"
           />
         </div>
-        <div class="col-lg-6 bg-light rounded mb-2">
+        <div class="col-lg-6 bg-light rounded mb-4">
           <div class="definition mt-3">
-            <h4 class="text-dark">Balloon Tour Project</h4>
+            <h4 class="text-dark">Cappadocia Balloon Tour Project</h4>
             <p class="mt-3 mb-4 text-muted">
-              I entered the world of front-end development by gaining some
-              knowledge in HTML, CSS, and JavaScript. I used my knowledge of
-              these languages, along with my new skills in VS Code, to build a
-              landing page about balloon tour. The page utilizes JavaScript
-              functions to create user interaction.
+              I started to my coding journey with this project. The project is
+              about joining the balloon tour during sunset in beautiful
+              Cappadocia, Turkey. On VS Code, I built a simple page using HTML,
+              CSS and thanks to JavaScript, the Join Balloon Tour button was
+              enabled. After 3-week of SheCodes Basic course, I deserved to get
+              the certificate of "Introduction to Coding" which is published on
+              my LinkedIn profile.
+              <br />
+              <br />
+              To apply the balloon tour, you just need to answer some questions.
+              The criteria here is the age limit. People who are less than 16
+              years old are not allowed to join this tour without their parent`s
+              permissions. When you are old enough (equal or more than 16
+              years), the page is asking for your email to send more information
+              (in the real tour case of course). I added some information about
+              Cappadocia as well. As you wish, you can read the rest of the text
+              by clicking on Read more on Wikipedia. You can have a try to test
+              the code by clicking on Learn More as well! Have fun. 🙌🏼
             </p>
             <a
               href="/projects.html#project-1"
@@ -93,17 +106,28 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5 mb-5">
-        <div class="col-lg-6 bg-light rounded mb-2">
+      <div class="row mt-2 mb-3">
+        <div class="col-lg-6 bg-light rounded mb-4">
           <div class="definition mt-3">
             <h4 class="text-dark">Weather App Project</h4>
-            <p class="mt-3 text-muted">
-              I built a Vanilla JavaScript weather app in SheCodes Plus, an
-              advanced 8-week JavaScript coding workshop. Building upon my
-              previously-gained knowledge, I also became skilled in Bootstrap,
-              API’s, real-life development workflow, hosting, and advanced
-              JavaScript. I combined all of these skills to create a
-              fully-functioning weather app.
+            <p class="text-muted">
+              I started with a real-life development workflow to the project.
+              I’ve learnt how to save the code at GitHub by creating the project
+              repository. I improved CSS properties by using Bootstrap, and more
+              importantly how to integrate the weather condition data to the
+              code by API. Especially Weather App project was a big challenge
+              for me to improve my JavaScript skill. I also practiced to code on
+              SandBox Code beside VS Code. In the end, I hosted the app on
+              Netlify to share. I shared my certificate of "Front-end
+              Development" on LinkedIn after completing 8-week of SheCodes+
+              workshop.
+              <br />
+              <br />
+              On the project, not only can you see the current time and weather
+              condition of the current location; but also you can search for any
+              other city to see its weather data. I also added five days weather
+              forecast at the bottom. You can have a try to test the code by
+              clicking on Learn More! I hope you’ll like it. 🙌🏼
             </p>
             <a
               href="/projects.html#project-2"
