--- a/projects.html
+++ b/projects.html
@@ -84,8 +84,9 @@
                     target="_blank"
                     class="info-link"
                     title="project view"
-                    >Click here </a
-                  >to view project
+                    >Click here</a
+                  >
+                  to test the code
                 </li>
                 <li>
                   Built with <strong>HTML</strong>, <strong>CSS</strong> and
@@ -98,7 +99,7 @@
                     target="_blank"
                     title="cappadocia balloon tour project open source on GitHub"
                     class="info-link"
-                    >open-sourced</a
+                    ><i class="fab fa-github-square github"></i> open-sourced</a
                   >
                 </li>
               </ul>
@@ -128,8 +129,9 @@
                     target="_blank"
                     class="info-link"
                     title="project view"
-                    >Click here </a
-                  >to view project
+                    >Click here</a
+                  >
+                  to test the code
                 </li>
                 <li>
                   Built with <strong>HTML</strong>,
@@ -144,7 +146,7 @@
                     target="_blank"
                     title="weather app open source on GitHub"
                     class="info-link"
-                    >open-sourced</a
+                    ><i class="fab fa-github-square github"></i> open-sourced</a
                   >
                 </li>
               </ul>
