Updated one grammer mistake

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="definition mt-3">
             <h4 class="text-dark">Cappadocia Balloon Tour Project</h4>
             <p class="mt-3 mb-4 text-muted">
-              I started to my coding journey with this project. The project is
+              I started my coding journey with this project. The project is
               about joining the balloon tour during sunset in beautiful
               Cappadocia, Turkey. On VS Code, I built a simple page using HTML,
               CSS and thanks to JavaScript, the Join Balloon Tour button was
