Added react dictionary app project which is on process

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
               about joining the balloon tour during sunset in beautiful
               Cappadocia, Turkey. On VS Code, I built a simple page using HTML,
               CSS and thanks to JavaScript, the Join Balloon Tour button was
-              enabled. After 3-week of SheCodes Basic course, I deserved to get
-              the certificate of "Introduction to Coding" which is published on
-              my LinkedIn profile.
+              enabled. After SheCodes Basic Workshop, I got the certificate of
+              "Introduction to Coding" which is published on my LinkedIn
+              profile.
               <br />
               <br />
               To apply the balloon tour, you just need to answer some questions.
@@ -117,10 +117,9 @@
               importantly how to integrate the weather condition data to the
               code by API. Especially Weather App project was a big challenge
               for me to improve my JavaScript skill. I also practiced to code on
-              SandBox Code beside VS Code. In the end, I hosted the app on
-              Netlify to share. I shared my certificate of "Front-end
-              Development" on LinkedIn after completing 8-week of SheCodes+
-              workshop.
+              CodeSandbox beside VS Code. In the end, I hosted the app on
+              Netlify to share. You can find my certificate of "Front-end
+              Development" on LinkedIn after completing SheCodes+ Workshop.
               <br />
               <br />
               On the project, not only can you see the current time and weather
