--- a/projects.html
+++ b/projects.html
@@ -154,6 +154,17 @@
             <br />
           </div>
         </div>
+        <hr class="m-3" />
+        <div class="col-lg-6 mt-5">
+          <h4>React Dictionary Project --></h4>
+          <h3 class="text-dark text-muted"></h3>
+          <br />
+        </div>
+        <div class="col-lg-6 mt-5">
+          <h4>On process..🤓</h4>
+          <h3 class="text-dark text-muted"></h3>
+          <br />
+        </div>
       </div>
     </div>
     <hr />
